# lattes-summary

./: .dockerignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
scriptLattes/scriptLattes/: baixaLattes.py  grupo.py  util.py
src/: main.py
src/lattes/: __init__.py  config.py  lattes.py
src/pages/: filter_lattes.py  view_results.py
