[tool.poetry]
name = "cefet-lattes"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Your Name you@example.com"]
packages = [
    { include = "scriptLattes" }
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
streamlit = ">=1.50.0,<2.0.0"
beautifulsoup4 = "4.13.5"
networkx = "3.5"
rapidfuzz = "3.14.0"
scipy = "1.16.1"
selenium = "4.35.0"
tqdm = "4.67.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
